--- a/e-shop-web-tests/e-shop-web-tests/e-shop-web-tests.csproj
+++ b/e-shop-web-tests/e-shop-web-tests/e-shop-web-tests.csproj
@@ -77,9 +77,8 @@
     <Compile Include="AccountData.cs" />
     <Compile Include="APIClient.cs" />
     <Compile Include="APIException.cs" />
-    <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UnitTest2.cs" />
+    <Compile Include="AddCouponTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
