--- a/e-shop-web-tests/e-shop-web-tests/e-shop-web-tests.csproj
+++ b/e-shop-web-tests/e-shop-web-tests/e-shop-web-tests.csproj
@@ -77,6 +77,7 @@
     <Compile Include="AccountData.cs" />
     <Compile Include="APIClient.cs" />
     <Compile Include="APIException.cs" />
+    <Compile Include="CouponData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AddCouponTests.cs" />
   </ItemGroup>
