Создан тест CouponRemovalTest. Данный тест следует доработать.

--- a/e-shop-web-tests/e-shop-web-tests/e-shop-web-tests.csproj
+++ b/e-shop-web-tests/e-shop-web-tests/e-shop-web-tests.csproj
@@ -78,6 +78,7 @@
     <Compile Include="APIClient.cs" />
     <Compile Include="APIException.cs" />
     <Compile Include="CouponData.cs" />
+    <Compile Include="CouponRemovalTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AddCouponTests.cs" />
   </ItemGroup>
