--- a/e-shop-web-tests/e-shop-web-tests/e-shop-web-tests.csproj
+++ b/e-shop-web-tests/e-shop-web-tests/e-shop-web-tests.csproj
@@ -80,7 +80,7 @@
     <Compile Include="CouponData.cs" />
     <Compile Include="CouponRemovalTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="AddCouponTests.cs" />
+    <Compile Include="CouponCreationTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
